# dreamer4

./: .gitignore  DREAMER4_IMPLEMENTATION_PLAN.md  pyproject.toml
dreamer4/: __init__.py  attention.py  configs.py  layers.py  mlp.py  modality.py  rope.py  transformer.py  utils.py
dreamer4/transformer/: __init__.py  attention.py  layers.py  norms.py  transformer.py
examples/: README.md  bouncing_ball.py  copy_task.py  next_token_prediction.py  sine_wave.py
tests/: test_attention.py  test_configs.py  test_layers.py  test_mlp.py  test_modality.py  test_norms.py  test_rope.py  test_transformer.py  test_utils.py
